--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -130,6 +130,7 @@ en:
     database:           'Database'
     runlist:            'Runlist'
     instance_type:      'Instance type'
+    add_ec2:            'Add EC2'
     btn:
       delete_stack:         'Delete Stack'
       delete_stack_confirm: 'Execute'
@@ -359,3 +360,7 @@ en:
   ec2_instances:
     description: 'Description'
     settings:    'Settings'
+
+  resources:
+    msg:
+      created: 'Resource was successfully created.'
