--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -362,5 +362,6 @@ en:
     settings:    'Settings'
 
   resources:
+    screen_name: 'Screen Name'
     msg:
       created: 'Resource was successfully created.'
