--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -70,6 +70,10 @@ ja:
       created:           'アプリケーションは正常に設定されました'
       show:              'SkyHopper へようこそ!'
       log_directory:     'データベースに出力できなかったログを保存するディレクトリ'
+      aws_description:   |
+        SkyHopper ではシステムが AWS を使用します。
+        例えば、SkyHopper が使用する Chef Server や Zabbix Server を管理するために使用します。
+        ここで設定された秘密鍵などは SkyHopper システムのみが使用し、ユーザーが作成するインフラには使用されません。
       access_key:        'SkyHopper のシステムが使用する AWS の Access Key ID（個別のインフラの管理には使用されません）'
       secret_access_key: 'SkyHopper のシステムが使用する AWS の Secret Access Key（個別のインフラの管理には使用されません）'
       aws_region:        'SkyHopper のシステムが使用する AWS のリージョン'
