--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -363,6 +363,9 @@ ja:
   ec2_instances:
     description: '詳細'
     settings:    '設定'
+    msg:
+      registered_to_elb:    'ELB に EC2 インスタンスを登録しました'
+      deregistered_from_elb: 'ELB から EC2 インスタンスの登録を解除しました'
 
   resources:
     screen_name: '表示名'
