--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -367,6 +367,9 @@ en:
     msg:
       registered_to_elb:    'EC2 instance was successfully registered to ELB'
       deregistered_from_elb: 'EC2 instance was successfully deregisterd from ELB'
+    btn:
+      register:   'Register to ELB'
+      deregister: 'Deregister from ELB'
 
   resources:
     screen_name: 'Screen Name'
