--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -370,6 +370,9 @@ en:
     btn:
       register:   'Register to ELB'
       deregister: 'Deregister from ELB'
+    confirm:
+      register:   'Do you want to register EC2 instance to ELB?'
+      deregister: 'Do you want to deregister EC2 instance from ELB?'
 
   resources:
     screen_name: 'Screen Name'
