--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -289,6 +289,7 @@ en:
       host_creating:           'Registering infrastructure...'
       before_create_host:      'This infrastructure has not been registered with Zabbix Server.'
       created:                 'This infrastructure has been registered with Zabbix Server.'
+      updated:                 'Monitoring configuration updated.'
       failure:                 'Failed to register with Zabbix Server.'
       not_selected:            'Monitoring options not selected yet.'
       invalid_parameters:      'Username or password of Zabbix Server are incorrect.'
