--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -242,6 +242,25 @@ en:
       auto_generated_disabled_html: '<small>This option is available only when runlist includes "<em>serverspec-handler</em>" cookbook.</small>'
 
 
+  serverspec_schedules:
+    change_schedule:  'Change schedule'
+    run_periodically: 'Run periodically'
+    frequency:
+      weekly:     'Weekly'
+      daily:      'Daily'
+    day_of_week:
+      sunday:     'Sunday'
+      monday:     'Monday'
+      tuesday:    'Tuesday'
+      wednesday:  'Wednesday'
+      thursday:   'Thursday'
+      friday:     'Friday'
+      saturday:   'Saturday'
+    o_clock:      "o'clock"
+    msg:
+      updated:    'Periodic run schedule of Serverspec has updated.'
+
+
   cf_templates:
     cf_templates: 'CloudFormation Templates'
     cf_template:  'CloudFormation Template'
