--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -413,3 +413,13 @@ en:
     screen_name: 'Screen Name'
     msg:
       created: 'Resource was successfully created.'
+
+
+  key_pairs:
+    key_pairs:   'Key Pairs'
+    name:        'Key pair name'
+    fingerprint: 'fingerprint'
+    region:      'Region'
+    using:       'Using'
+    msg:
+      confirm:    'Are you sure to delete KeyPair "%{name}"?'
