--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -423,3 +423,4 @@ ja:
     using:       '使用中'
     msg:
       confirm:    'キーペア "%{name}" を削除しますか?'
+      deleted:    'キーペア "%{name}" が正常に削除されました'
