--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -389,10 +389,19 @@ en:
       not_running:    'Zabbix Server is not running.'
 
   ec2_instances:
-    description:     'Description'
-    settings:        'Settings'
-    change_status:   'Change status of EC2 instance'
-    changing_status: 'Changing status of EC2 instance...'
+    description:       'Description'
+    settings:          'Settings'
+    change_status:     'Change status of EC2 instance'
+    changing_status:   'Changing status of EC2 instance...'
+    listeners:          'Listeners'
+    protocol:          'Protocol'
+    lb_port:           'LoadBalancer Port'
+    instance_protocol: 'Instance Protocol'
+    instance_port:     'Instance Port'
+    expiration_date:   'Expiration date of SSL certificate'
+    instances:         'Instances'
+    state:             'State'
+    reason_code:       'Reason Code'
     msg:
       registered_to_elb:    'EC2 instance was successfully registered to ELB.'
       deregistered_from_elb: 'EC2 instance was successfully deregisterd from ELB.'
