--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -243,7 +243,7 @@ en:
       auto_generated_disabled_html: '<small>This option is available only when runlist includes "<em>serverspec-handler</em>" cookbook.</small>'
 
 
-  serverspec_schedules:
+  schedules:
     change_schedule:  'Change schedule'
     run_periodically: 'Run periodically'
     frequency:
@@ -262,7 +262,8 @@ en:
     hours:        'hours'
     next_run:     'Next run time is at {{next_run}}:00'
     msg:
-      updated:    'Periodic run schedule of Serverspec has updated.'
+      serverspec_updated: 'Periodic run schedule of Serverspec has updated.'
+      yum_updated: 'Periodic run schedule of Yum has updated.'
 
 
   cf_templates:
