--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -344,25 +344,36 @@ en:
     user:              'User'
     role:              'Role'
     email:             'E-Mail'
+    password:          'Password'
+    password_confirm:  'Password Confirmation'
     last_signed_in_at: 'Last signed in at'
     you:               'YOU'
     edit:              'Edit Permissions'
     allowed_projects:  'Allowed Projects'
     unregistered:      'Unregistered'
     mfa_token:         'MFA Token'
+    mfa:               'Multi Factor Authentication'
+    change_password:   'Change Password'
+    change_mfa_secret: 'Change secret key of MFA'
+    use_start_mfa:     'Use start MFA'
+    use_stop_mfa:      'Use stop MFA'
+    mfa_secret:        'Secret key of MFA'
     btn:
       add: 'Add User'
       sync: 'Synchronize with Zabbix Server'
     msg:
-      role:                'Master users can see all of infrastructures. Admin users can change assigned infrastructures.'
-      created:             'An account was successfully created.'
-      updated:             'An account was successfully updated.'
-      deleted:             'An account was successfully deleted.'
-      synced:              'All of accounts was successfully synchronized with Zabbix Server.'
-      only_master:         'The feature of User Management is only permitted to Master users.'
-      confirm_sync_zabbix: 'Do you want to synchronize users with Zabbix Server?'
-      mfa_description:     'This user is protected by MFA. Please enter one-time password.'
-      mfa_failure:         'Invalid one-time password'
+      role:                  'Master users can see all of infrastructures. Admin users can change assigned infrastructures.'
+      created:               'An account was successfully created.'
+      updated:               'An account was successfully updated.'
+      deleted:               'An account was successfully deleted.'
+      synced:                'All of accounts was successfully synchronized with Zabbix Server.'
+      only_master:           'The feature of User Management is only permitted to Master users.'
+      confirm_sync_zabbix:   'Do you want to synchronize users with Zabbix Server?'
+      mfa_description:       'This user is protected by MFA. Please enter one-time password.'
+      mfa_failure:           'Invalid one-time password'
+      mfa_used:              'MFA is already used.'
+      mfa_start_description: 'Enter secret key to MFA device. Or Scan QR code.'
+      use_stop_mfa:          'If save changes, use stop MFA.'
 
 
   chef_servers:
