Put create snapshot button in snapshots modal

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -460,6 +460,8 @@ ja:
     delete_snapshot:   'スナップショットの削除'
     schedule_snapshot: '作成スケジュールの変更'
     list_of_snapshots: 'スナップショットの一覧'
+    btn:
+      create:          '作成'
     msg:
       create_snapshot: '%{volume_id} のスナップショットを作成しますか?'
       delete_snapshot: '以下のスナップショットを削除しますか?'
