--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -460,6 +460,8 @@ en:
     delete_snapshot:   'Delete Snapshot'
     schedule_snapshot: 'Schedule Snapshot Creation'
     list_of_snapshots: 'List of Snapshots'
+    btn:
+      create:          'Create'
     msg:
       create_snapshot: 'Are you sure you want to create snapshot of %{volume_id} ?'
       delete_snapshot: 'Are you sure you want to delete following snapshots?'
