--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -198,6 +198,7 @@ ja:
       yum_update_started: 'yum が正常に開始されました'
       attr_not_exists:    '利用可能なアトリビュートは存在しません'
       runlist_empty:      'Runlist は空です'
+      dish_applied:       'Dish が適用されました'
 
 
   dishes:
