--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -465,4 +465,4 @@ ja:
     msg:
       create_snapshot: '%{volume_id} のスナップショットを作成しますか?'
       delete_snapshot: '以下のスナップショットを削除しますか?'
-
+      creation_started: 'スナップショットの作成が開始されました'
