--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -80,6 +80,7 @@ en:
       aws_region:        'Regions of AWS available for SkyHopper System'
       aws_keypair:       'SSH key used for SkyHopper System (Registered KeyPair from EC2 console that is linked with API key above)'
       zabbix_updated:    'Zabbix Setting was successfully updated.'
+      eip_limit_error:   'Cannot allocate EIP. Please check the limit of EIP.'
     title:
       show:   'Welcome to SkyHopper!'
       setup:  'Setup'
