--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -420,7 +420,9 @@ en:
     state:             'State'
     reason_code:       'Reason Code'
     msg:
-      registered_to_elb:    'EC2 instance was successfully registered to ELB.'
+      start_ec2:             'Start to turn on the power EC2 instance.'
+      stop_ec2:              'Start to turn off the power EC2 instance.'
+      registered_to_elb:     'EC2 instance was successfully registered to ELB.'
       deregistered_from_elb: 'EC2 instance was successfully deregisterd from ELB.'
     btn:
       register:   'Register to ELB'
