--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -310,11 +310,14 @@ ja:
     trigger:              '閾値の設定'
     explanation_triggers: 'トリガーの説明'
     register_host:        'インフラストラクチャを Zabbix Server に登録'
+    before_reg_title:     '先に進む前に、テンプレートを選択してください。'
     btn:
       create: '登録'
       add:    '追加'
       edit:   '編集'
       delete: '削除'
+      done:   '終わりました'
+      cancel: 'キャンセル'
     msg:
       host_creating:           'インフラストラクチャの登録を行っています。しばらくお待ちください...'
       before_create_host:      'このインフラストラクチャは Zabbix Server に登録されていません'
