--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -167,6 +167,8 @@ en:
       not_necessary:               'Unnecessary to edit this infrastructure.'
       check_intervals:             'Automatic status update: every 15 seconds ...'
       generate_serverspec_confirm: 'Generate serverspec to verify access to RDS Instance?'
+      empty-list:                 'Infrastructure list is empty'
+      loading-list:                'Loading Infrastructures ...'
 
 
   nodes:
